--- a/Styles/contacto.css
+++ b/Styles/contacto.css
@@ -28,9 +28,9 @@ header {
 }
 
 
-.container {  display: grid;
+.container-grid {  display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows:  0.10fr 10fr 1fr;
+    grid-template-rows:  0.10fr 100% 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -48,57 +48,48 @@ header {
   
 .footer { grid-area: footer;}
 
+/* Seccion Navbar */
 .navbar {
     width: 100%;
-    padding: 0px;
     background-color: rgb(25, 209, 123);
-    font-weight: 600;
 }
 
-.Logo img {
-    position: relative;
-    height: 200px;
-}
-
-
-nav ul {
-    text-align: center;
-}
-
-ul li a {
+.nav-item .nav-link {
     text-decoration: none;
-    color: rgb(7, 34, 39);
-}
-
-nav ul li  {
     list-style: none;
     font-size: 1.20em;
     color: rgb(7, 34, 39);
-    font-family: "Play&display";
-    display: inline-block;
-    justify-content: space-between;
-    padding: 10px 80px;
-    width: 150px;
-    height: 50px;
-    line-height: 80px;
-    align-items: center;
-    position: relative;
     bottom: 10px;
 }
 
-nav ul li:hover {
+.nav-item .nav-link:hover {
+    text-decoration: none !important;
     background-color:rgb(24, 192, 114);
     transition: all 0.3s ease-in 0.1s;
+    color: whitesmoke !important;
 }
-nav ul li a:hover {
-    color: whitesmoke;
-    transition: all 0.1s ease-in 0.1s;
+
+#buttonnavbar {
+    background-color:rgb(25, 209, 123); 
+    border: black solid 0.15em; 
+    border-radius: 10%; 
+    color:  rgb(7, 34, 39); margin-right:3.50em;
+}
+#navbarLight {
+    transition: 0.4s;
+}
+
+#barrabusqueda {
+    border-radius: 5%;
 }
 
 nav ul li i {
-    font-size: 1.10em;
+    font-size: 1.20em;
+    padding-left: 10px;
+    margin-left: 5px;
 }
 
+/* Fin de Seccion Navbar */
 
 /* Seccion Main */
 h1, h2, h3, h4, h5, h6 {
@@ -108,6 +99,11 @@ h1, h2, h3, h4, h5, h6 {
     color: rgb(7, 34, 39);
     text-decoration: none;
     list-style: none;
+}
+
+ul li a {
+    text-decoration: none;
+    color: rgb(7, 34, 39);
 }
 
 .logocontacto {
@@ -216,18 +212,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Seccion queries contacto */
 @media screen and (max-width:700px) {
-    .container {  display: grid;
-        grid-template-columns:  1fr 1fr 1fr;
-        grid-template-rows:   0.10fr 4fr 0.20fr;
-        gap: 0px 0px;
-        grid-auto-flow: row;
-        grid-template-areas:
-          "header header header"
-          "main main main"
-          "seccionformularios seccionformularios seccionformularios"
-          "footer footer footer";
-      }  
-
+   
       .seccionformulario {
         position: relative;
         display: flex;
@@ -235,11 +220,26 @@ h1, h2, h3, h4, h5, h6 {
         align-items: center;
         height: 100%;
         width: 100%;
-        padding: 0px 0px;
+        padding: 1em 1em;
+     }
+     .logocontacto {
+         height: 90%;
+         width: 90%;
      }
 }
 
+@media screen and (max-width:400px) {
+    .seccionformulario { 
+        padding: 0.40em 0.40em;
+    }
+    .btn {
+        width: 50%;
+        margin: 2%;
+    }
+}
+
 /* Seccion Footer */
+
 
 footer {
     background-color: rgb(25, 209, 123);
@@ -274,6 +274,7 @@ ul {
 .containerfooter_row_col ul li a {
     font-size: 1.50em;
     text-transform: capitalize ;
+    padding-right: 9%;
     display: block;
     transition: all 0.3s ease;
 }
@@ -285,6 +286,7 @@ ul {
 }
 
 .containerfooter_row_col h2, h3, h4, h5 {
+    font-size: 1.50em !important;
     text-transform: capitalize;
     margin-bottom: 15px;
     position: relative;
@@ -296,35 +298,39 @@ ul {
     font-size: 2.20em;
     height: 40px;
     width: 50px;
-    padding: 3%;
+    padding: 2%;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.2);
-    line-height: 40px;
+    line-height: 40px ;
     text-align: center;
     color: rgb(7, 34, 39);
     border-radius: 50%;
+    box-sizing: content-box !important;
     transition: all 0.3s;
 }
 
 .containerfooter_row_col .footer_social a:hover {
     color: white;
 }
+.containerfooter_row_col .footer_pay {
+    padding-top: 10px;
+}
 
 .containerfooter_row_col .footer_pay i{
     display: inline-block;
-    font-size: 3em;
+    font-size: 2.40em;
     height: 40px;
     width: 50px;
-    padding: 3%;
+    padding: 2%;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px;
     text-align: center;
     color: rgb(7, 34, 39);
     border-radius: 50%;
+    box-sizing: content-box !important;
     transition: all 0.3s;
 }
-
 
 .copyright {
     font-size: 1.30em;
