--- a/Styles/index.css
+++ b/Styles/index.css
@@ -7,6 +7,7 @@
     font-family: 'Ropa Sans', sans-serif;
 }
 
+
 img {
     max-width: 100%;
     max-height: 100%;
@@ -17,13 +18,13 @@ img {
     height: auto;
 }
 
-.container {  display: grid;
+.container-grid {  display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows:  0.05fr 2.5fr  1fr ;
+    grid-template-rows:  0.05fr 110%  1fr ;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-      "header header header"
+      "header header header "
       "main main main"
       "ofertaproductos ofertaproductos ofertaproductos"
       "footer footer footer";
@@ -36,56 +37,45 @@ img {
 .ofertaproductos { grid-area: ofertaproductos; }
 
 .footer { grid-area: footer; }
-  
+
+/* Seccion navbar */
 .navbar {
     width: 100%;
-    padding: 0px;
     background-color: rgb(25, 209, 123);
-    font-weight: 600;
 }
 
-.Logo img {
-    position: relative;
-    height: 200px;
-}
-
-
-nav ul {
-    text-align: center;
-}
-
-ul li a {
+.nav-item .nav-link {
     text-decoration: none;
-    color: rgb(7, 34, 39);
-}
-
-nav ul li  {
     list-style: none;
     font-size: 1.20em;
     color: rgb(7, 34, 39);
-    font-family: "Play&display";
-    display: inline-block;
-    justify-content: space-between;
-    padding: 10px 80px;
-    width: 150px;
-    height: 50px;
-    line-height: 80px;
-    align-items: center;
-    position: relative;
     bottom: 10px;
 }
 
-nav ul li:hover {
+.nav-item .nav-link:hover {
+    text-decoration: none !important;
     background-color:rgb(24, 192, 114);
     transition: all 0.3s ease-in 0.1s;
-}
-nav ul li a:hover {
-    color: whitesmoke;
-    transition: all 0.1s ease-in 0.1s;
+    color: whitesmoke !important;
 }
 
+#buttonnavbar {
+    background-color:rgb(25, 209, 123); 
+    border: black solid 0.15em; 
+    border-radius: 10%; 
+    color:  rgb(7, 34, 39); margin-right:3.50em;
+}
+#navbarLight {
+    transition: 0.4s;
+}
+
+#barrabusqueda {
+    border-radius: 5%;
+}
 nav ul li i {
-    font-size: 1.10em;
+    font-size: 1.20em;
+    padding-left: 10px;
+    margin-left: 5px;
 }
 
 #carousel {
@@ -93,6 +83,12 @@ nav ul li i {
     align-items: center;
     margin: auto;
 }
+
+ul li a {
+    text-decoration: none;
+    color: rgb(7, 34, 39);
+}
+
 
 /* Seccion Main */
 h1, h2, h3, h4, h5, h6 {
@@ -166,22 +162,10 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgb(22, 182, 107);
     transition: 0.3s;
 }
+/* Final de Seccion Main */
 
-/* Seccion Queries index */
 
-@media screen and (max-width:700px) {
-    .container {  display: grid;
-        grid-template-columns:  1fr 1fr 1fr;
-        grid-template-rows:  0.05fr 8fr 1fr;
-        gap: 0px 0px;
-        grid-auto-flow: row;
-        grid-template-areas:
-          "header header header"
-          "main main main"
-          "ofertaproductos ofertaproductos ofertaproductos"
-          "footer footer footer";
-      }
-}
+/*Seccion Queries index Final  */
 
 #ofertaindex {
     text-align: center;
@@ -209,6 +193,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgb(22, 185, 109);
     transition: all 0.1s ease-in 0.1s;
 }
+
 /* Seccion Footer */
 
 footer {
@@ -244,6 +229,7 @@ ul {
 .containerfooter_row_col ul li a {
     font-size: 1.50em;
     text-transform: capitalize ;
+    padding-right: 9%;
     display: block;
     transition: all 0.3s ease;
 }
@@ -255,6 +241,7 @@ ul {
 }
 
 .containerfooter_row_col h2, h3, h4, h5 {
+    font-size: 1.50em !important;
     text-transform: capitalize;
     margin-bottom: 15px;
     position: relative;
@@ -266,36 +253,41 @@ ul {
     font-size: 2.20em;
     height: 40px;
     width: 50px;
-    padding: 3%;
+    padding: 2%;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.2);
-    line-height: 40px;
+    line-height: 40px ;
     text-align: center;
     color: rgb(7, 34, 39);
     border-radius: 50%;
+    box-sizing: content-box !important;
     transition: all 0.3s;
 }
 
 .containerfooter_row_col .footer_social a:hover {
     color: white;
 }
+.containerfooter_row_col .footer_pay {
+    padding-top: 10px;
+}
 
 .containerfooter_row_col .footer_pay i{
     display: inline-block;
-    font-size: 3em;
+    font-size: 2.40em;
     height: 40px;
     width: 50px;
-    padding: 3%;
+    padding: 2%;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px;
     text-align: center;
     color: rgb(7, 34, 39);
     border-radius: 50%;
+    box-sizing: content-box !important;
     transition: all 0.3s;
 }
 
-
+/* Seccion Footer Final */
 
 .copyright {
     font-size: 1.30em;
@@ -306,12 +298,31 @@ ul {
     text-align: center;
     border-top: solid rgb(7, 34, 39);
 }
+/* Seccion Queries index */
+@media screen and (min-width: 560px){
+    .container-grid {  display: grid;
+        grid-template-columns:  1fr 1fr 1fr;
+        grid-template-rows:  0.05fr 120%  0.20fr ;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          "header header header "
+          "main main main"
+          "ofertaproductos ofertaproductos ofertaproductos"
+          "footer footer footer";
+      }
+    }
+    
+    /* Tengo que modificar esta query */
 
-/* footer responsive */
+/* Footer Responsive */
 @media (max-width: 767px) { 
     .containerfooter_row_col {
         width: 50%;
         margin-bottom: 30px;
+    }
+    .footer {
+        margin-top: 4em;
     }
 }
 
@@ -319,6 +330,9 @@ ul {
     .containerfooter_row_col {
         width: 100%;
         margin-bottom: 30px;
+    }
+    .footer {
+        margin-top: 5em;
     }
 }
 
