--- a/Styles/ofertas.css
+++ b/Styles/ofertas.css
@@ -24,9 +24,9 @@ header {
     display: flex;
 }
 
-.container {  display: grid;
+.container-grid {  display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows:  0.05fr 2.5fr 1fr;
+    grid-template-rows:  0.05fr 100% 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -44,56 +44,48 @@ header {
 
 .footer { grid-area: footer; }
 
+/* Seccion Navbar */
 .navbar {
     width: 100%;
-    padding: 0px;
     background-color: rgb(25, 209, 123);
-    font-weight: 600;
 }
 
-.Logo img {
-    position: relative;
-    height: 200px;
-}
-
-
-nav ul {
-    text-align: center;
-}
-
-ul li a {
+.nav-item .nav-link {
     text-decoration: none;
-    color: rgb(7, 34, 39);
-}
-
-nav ul li  {
     list-style: none;
     font-size: 1.20em;
     color: rgb(7, 34, 39);
-    font-family: "Play&display";
-    display: inline-block;
-    justify-content: space-between;
-    padding: 10px 80px;
-    width: 150px;
-    height: 50px;
-    line-height: 80px;
-    align-items: center;
-    position: relative;
     bottom: 10px;
 }
 
-nav ul li:hover {
+.nav-item .nav-link:hover {
+    text-decoration: none !important;
     background-color:rgb(24, 192, 114);
     transition: all 0.3s ease-in 0.1s;
-}
-nav ul li a:hover {
-    color: whitesmoke;
-    transition: all 0.1s ease-in 0.1s;
+    color: whitesmoke !important;
 }
 
-nav ul li i {
-    font-size: 1.10em;
+#buttonnavbar {
+    background-color:rgb(25, 209, 123); 
+    border: black solid 0.15em; 
+    border-radius: 10%; 
+    color:  rgb(7, 34, 39); margin-right:3.50em;
 }
+#navbarLight {
+    transition: 0.4s;
+}
+
+#barrabusqueda {
+    border-radius: 5%;
+}
+nav ul li i {
+    font-size: 1.20em;
+    padding-left: 10px;
+    margin-left: 5px;
+}
+/* Fin seccion Navbar */
+
+/* Seccion Ofertas */
 
 .ofertaproductos {
     width: 100%;
@@ -164,19 +156,7 @@ background-color: rgb(25, 209, 123) ;
 
 /* Media Queries ofertas */
 
-@media screen and (max-width:700px) {
-    .container {  display: grid;
-        grid-template-columns:  1fr 1fr 1fr;
-        grid-template-rows:  0.05fr 8fr 1fr;
-        gap: 0px 0px;
-        grid-auto-flow: row;
-        grid-template-areas:
-          "header header header"
-          "main main main"
-          "ofertaproductos ofertaproductos ofertaproductos"
-          "footer footer footer";
-      }
-}
+
 
 /* Seccion Main */
 h1, h2, h3, h4, h5, h6 {
@@ -188,6 +168,10 @@ h1, h2, h3, h4, h5, h6 {
     list-style: none;
 }
 
+ul li a {
+    text-decoration: none;
+    color: rgb(7, 34, 39);
+}
 /* Ofertas*/
 .ofertasimage {
     font-size: 3em;
@@ -208,19 +192,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/* Ofertas Queries */
-@media screen and (max-width:700px) {
-    .ofertasimage {
-        font-size: 3em;
-        text-align: center;
-        margin: auto;
-        background-image: url(https://images.samsung.com/is/image/samsung/assets/ar/explore/experience/ces2022/global0026_explore_ces2022_story-full-bleed_pc_1440x640.jpg?$ORIGIN_JPG$);
-        width: 700px;
-        height: 607px;
-        background-repeat: no-repeat;
-        background-color: transparent;
-    }
-}
+
 
 #destacadosdelmes { 
     position: relative;
@@ -261,7 +233,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Seccion Footer */
-/* Seccion Footer */
 
 footer {
     background-color: rgb(25, 209, 123);
@@ -296,6 +267,7 @@ ul {
 .containerfooter_row_col ul li a {
     font-size: 1.50em;
     text-transform: capitalize ;
+    padding-right: 9%;
     display: block;
     transition: all 0.3s ease;
 }
@@ -307,6 +279,7 @@ ul {
 }
 
 .containerfooter_row_col h2, h3, h4, h5 {
+    font-size: 1.50em !important;
     text-transform: capitalize;
     margin-bottom: 15px;
     position: relative;
@@ -318,37 +291,41 @@ ul {
     font-size: 2.20em;
     height: 40px;
     width: 50px;
-    padding: 3%;
+    padding: 2%;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.2);
-    line-height: 40px;
+    line-height: 40px ;
     text-align: center;
     color: rgb(7, 34, 39);
     border-radius: 50%;
+    box-sizing: content-box !important;
     transition: all 0.3s;
 }
 
 .containerfooter_row_col .footer_social a:hover {
     color: white;
 }
+.containerfooter_row_col .footer_pay {
+    padding-top: 10px;
+}
 
 .containerfooter_row_col .footer_pay i{
     display: inline-block;
-    font-size: 3em;
+    font-size: 2.40em;
     height: 40px;
     width: 50px;
-    padding: 3%;
+    padding: 2%;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px;
     text-align: center;
     color: rgb(7, 34, 39);
     border-radius: 50%;
+    box-sizing: content-box !important;
     transition: all 0.3s;
 }
 
-
-
+/* Seccion Footer Final */
 .copyright {
     font-size: 1.30em;
     font-family: 'Poppins', sans-serif;
@@ -359,11 +336,42 @@ ul {
     border-top: solid rgb(7, 34, 39);
 }
 
+/* Ofertas Queries */
+@media screen and (max-width:700px) {
+    .ofertasimage {
+        font-size: 3em;
+        text-align: center;
+        margin: auto;
+        background-image: url(https://images.samsung.com/is/image/samsung/assets/ar/explore/experience/ces2022/global0026_explore_ces2022_story-full-bleed_pc_1440x640.jpg?$ORIGIN_JPG$);
+        width: 700px;
+        height: 607px;
+        background-repeat: no-repeat;
+        background-color: transparent;
+    }
+}
+
+@media screen and (min-width: 560px) { 
+    .container-grid {  display: grid;
+        grid-template-columns:  1fr 1fr 1fr;
+        grid-template-rows:  0.05fr 130% 1fr;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          "header header header"
+          "main main main"
+          "ofertaproductos ofertaproductos ofertaproductos"
+          "footer footer footer";
+      }
+    }
+    
 /* footer responsive */
 @media (max-width: 767px) { 
     .containerfooter_row_col {
         width: 50%;
         margin-bottom: 30px;
+    }
+    .footer {
+        margin-top: 4em;
     }
 }
 
@@ -371,5 +379,8 @@ ul {
     .containerfooter_row_col {
         width: 100%;
         margin-bottom: 30px;
+    }
+    .footer {
+        margin-top: 30em;
     }
 }
