--- a/Styles/productos.css
+++ b/Styles/productos.css
@@ -26,7 +26,7 @@ header {
 
 .container-grid {  display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows:  0.05fr 100% 1fr;
+    grid-template-rows:  0.05fr 110% 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -339,10 +339,9 @@ ul {
     text-align: center;
     border-top: solid rgb(7, 34, 39);
 }
-/* Seccion Footer Final */
 /* Seccion Queries  */
 /* footer responsive */
-@media (min-width: 830px) { 
+@media (max-width: 767px) { 
     .containerfooter_row_col {
         width: 50%;
         margin-bottom: 30px;
