--- a/Styles/index.css
+++ b/Styles/index.css
@@ -88,7 +88,41 @@ ul li a {
     text-decoration: none;
     color: rgb(7, 34, 39);
 }
+/* Seccion carousel */
+.carousel-item {
+    height: 55rem;
+    background: black;
+    color: white;
+    position: relative;
+    font-size: 2em;
+    background-position: center;
+    background-size: cover;
+}
 
+.overlay-image {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top:0;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.7;
+}
+
+.container {
+    position:absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding-bottom: 3em;
+}
+
+.btn-primary {
+    border-radius: 5% !important;
+    background-color:rgb(24, 192, 114) !important;
+    border-color: rgb(24, 192, 114) !important ;
+}
 
 /* Seccion Main */
 h1, h2, h3, h4, h5, h6 {
@@ -323,6 +357,9 @@ ul {
     }
     .footer {
         margin-top: 4em;
+    }
+    #ofertaindex {
+        margin-bottom: 4em;
     }
 }
 
