--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,3 +1,4 @@
+/* Inicio Seccion General-Grids */
 @import url('https://fonts.googleapis.com/css2?family=Play&family=Ropa+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Play&family=Poppins:ital,wght@0,700;1,700&family=Ropa+Sans&display=swap');
 
@@ -20,7 +21,7 @@ img {
 
 .container-grid {  display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows:  0.05fr 110%  1fr ;
+    grid-template-rows:  0.05fr 100%  1fr ;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -38,10 +39,17 @@ img {
 
 .footer { grid-area: footer; }
 
-/* Seccion navbar */
+/* Fin Seccion General-Grids */
+
+/* Inicio de seccion navbar */
 .navbar {
     width: 100%;
     background-color: rgb(25, 209, 123);
+}
+
+.Logo:hover {
+    transform: scale(1.10);
+    transition: 0.3s;
 }
 
 .nav-item .nav-link {
@@ -88,9 +96,11 @@ ul li a {
     text-decoration: none;
     color: rgb(7, 34, 39);
 }
-/* Seccion carousel */
+/* Final de seccion navbar */
+
+/* Inicio de seccion carousel */
 .carousel-item {
-    height: 55rem;
+    height: 60rem;
     background: black;
     color: white;
     position: relative;
@@ -123,8 +133,9 @@ ul li a {
     background-color:rgb(24, 192, 114) !important;
     border-color: rgb(24, 192, 114) !important ;
 }
+/* Fin de seccion Carousel */
 
-/* Seccion Main */
+/* Inicio de seccion main */
 h1, h2, h3, h4, h5, h6 {
     text-overflow: initial;
     font-size: 1.50em;
@@ -140,9 +151,14 @@ h1, h2, h3, h4, h5, h6 {
         height: 100vh;
         display: flex;
         align-items: center;
-        justify-content: center;
-        justify-content: space-around;
+        justify-content: space-evenly;
         flex-wrap: wrap;
+}
+
+.productcard {
+    margin-top: 2%;
+    margin-right: 2%;
+    margin-left: 2%;
 }
 
 .ofertaproductos .productcard {
@@ -196,10 +212,6 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgb(22, 182, 107);
     transition: 0.3s;
 }
-/* Final de Seccion Main */
-
-
-/*Seccion Queries index Final  */
 
 #ofertaindex {
     text-align: center;
@@ -227,8 +239,9 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgb(22, 185, 109);
     transition: all 0.1s ease-in 0.1s;
 }
+/* Final de Seccion Main */
 
-/* Seccion Footer */
+/* Inicio de seccion footer */
 
 footer {
     background-color: rgb(25, 209, 123);
@@ -321,7 +334,6 @@ ul {
     transition: all 0.3s;
 }
 
-/* Seccion Footer Final */
 
 .copyright {
     font-size: 1.30em;
@@ -332,6 +344,8 @@ ul {
     text-align: center;
     border-top: solid rgb(7, 34, 39);
 }
+/* Final de seccion footer */
+
 /* Seccion Queries index */
 @media screen and (min-width: 560px){
     .container-grid {  display: grid;
@@ -347,29 +361,33 @@ ul {
       }
     }
     
-    /* Tengo que modificar esta query */
-
 /* Footer Responsive */
-@media (max-width: 767px) { 
+@media (max-width: 1024px) { 
     .containerfooter_row_col {
         width: 50%;
         margin-bottom: 30px;
     }
     .footer {
-        margin-top: 4em;
+        margin-top: 15em;
     }
     #ofertaindex {
         margin-bottom: 4em;
     }
 }
 
-@media (max-width: 574px) { 
+@media (max-width: 610px) { 
     .containerfooter_row_col {
         width: 100%;
         margin-bottom: 30px;
     }
     .footer {
-        margin-top: 5em;
+        margin-top: 50em;
+    }
+}
+@media (max-width: 560px) {
+    .footer {
+        margin-top: 80em;
     }
 }
 
+/* Final de Queries */
