Agregue Sass a una seccion, modifique colores y agregue links a productos

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -56,7 +56,7 @@ img {
     text-decoration: none;
     list-style: none;
     font-size: 1.20em;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     bottom: 10px;
 }
 
@@ -70,8 +70,8 @@ img {
 #buttonnavbar {
     background-color:rgb(25, 209, 123); 
     border: black solid 0.15em; 
-    border-radius: 10%; 
-    color:  rgb(7, 34, 39); margin-right:3.50em;
+    color:  rgb(0, 0, 0); 
+    margin-right: 3.50em;
 }
 #navbarLight {
     transition: 0.4s;
@@ -84,6 +84,7 @@ nav ul li i {
     font-size: 1.20em;
     padding-left: 10px;
     margin-left: 5px;
+    color: rgb(0, 0, 0);
 }
 
 #carousel {
@@ -94,7 +95,7 @@ nav ul li i {
 
 ul li a {
     text-decoration: none;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
 }
 /* Final de seccion navbar */
 
@@ -129,9 +130,9 @@ ul li a {
 }
 
 .btn-primary {
-    border-radius: 5% !important;
     background-color:rgb(24, 192, 114) !important;
     border-color: rgb(24, 192, 114) !important ;
+    padding: 0.80em !important; 
 }
 /* Fin de seccion Carousel */
 
@@ -140,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
     text-overflow: initial;
     font-size: 1.50em;
     font-weight: 600;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     text-decoration: none;
     list-style: none;
 }
@@ -220,7 +221,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .suscribir {
     font-size: 2.25em;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     border-top: solid rgb(7, 34, 39) ;
     text-align: center;
     background-color: rgb(25, 209, 123);
@@ -230,8 +231,9 @@ h1, h2, h3, h4, h5, h6 {
 .button {
     font-size: 0.50em ;
     background-color: rgb(25, 209, 123);
-    border: outset rgb(6, 31, 36);
+    border: outset rgb(0, 0, 0);
     border-radius: 0.30em;
+    padding: 0.40em;
 } 
 
 .button:hover {
@@ -252,7 +254,7 @@ ul {
 }
 
 .containerfooter {
-    border-top: solid rgb(7, 34, 39);
+    border-top: solid rgb(0, 0, 0);
     max-width: 100%;
     margin: auto;
 }
@@ -305,7 +307,7 @@ ul {
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px ;
     text-align: center;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     border-radius: 50%;
     box-sizing: content-box !important;
     transition: all 0.3s;
@@ -328,7 +330,7 @@ ul {
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px;
     text-align: center;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     border-radius: 50%;
     box-sizing: content-box !important;
     transition: all 0.3s;
