--- a/Styles/contacto.css
+++ b/Styles/contacto.css
@@ -65,7 +65,7 @@ header {
     text-decoration: none;
     list-style: none;
     font-size: 1.20em;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     bottom: 10px;
 }
 
@@ -80,7 +80,7 @@ header {
     background-color:rgb(25, 209, 123); 
     border: black solid 0.15em; 
     border-radius: 10%; 
-    color:  rgb(7, 34, 39); margin-right:3.50em;
+    color:  rgb(0, 0, 0); margin-right:3.50em;
 }
 #navbarLight {
     transition: 0.4s;
@@ -94,6 +94,7 @@ nav ul li i {
     font-size: 1.20em;
     padding-left: 10px;
     margin-left: 5px;
+    color: rgb(0, 0, 0);
 }
 
 /* Final de seccion navbar */
@@ -103,14 +104,14 @@ h1, h2, h3, h4, h5, h6 {
     text-overflow: initial;
     font-size: 1.50em;
     font-weight: 600;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     text-decoration: none;
     list-style: none;
 }
 
 ul li a {
     text-decoration: none;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
 }
 
 /* Inicio de Seccion Contacto */
@@ -204,15 +205,16 @@ ul li a {
    width: 30%;
    padding: 0.5rem  0.5rem;
    font-size: 1.1rem;
-   background-color: rgb(25, 209, 123) ;
+   background-color: rgb(24, 190, 113) !important;
    cursor: pointer;
    outline: none;
    border: none;
-   transition: 0.3s;
 }
 
 .btn:hover {
-   background-color: rgb(24, 190, 113);
+   background-color: rgb(24, 177, 105) !important;
+   border: solid black 1px ;
+   transition: all 0.4s;
 } 
 
 .labelfont {
@@ -231,7 +233,7 @@ ul {
 }
 
 .containerfooter {
-    border-top: solid rgb(7, 34, 39);
+    border-top: solid rgb(0, 0, 0);
     max-width: 100%;
     margin: auto;
 }
@@ -284,7 +286,7 @@ ul {
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px ;
     text-align: center;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     border-radius: 50%;
     box-sizing: content-box !important;
     transition: all 0.3s;
@@ -307,7 +309,7 @@ ul {
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px;
     text-align: center;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     border-radius: 50%;
     box-sizing: content-box !important;
     transition: all 0.3s;
@@ -316,11 +318,11 @@ ul {
 .copyright {
     font-size: 1.30em;
     font-family: 'Poppins', sans-serif;
-    color: rgb(7, 34, 39);
+    color: rgb(0, 0, 0);
     font-weight:  300;
     background-color: rgb(25, 209, 123);
     text-align: center;
-    border-top: solid rgb(7, 34, 39);
+    border-top: solid rgb(0, 0, 0);
 }
 
 /* Final de Seccion Footer */
