--- a/Styles/index.css
+++ b/Styles/index.css
@@ -26,7 +26,10 @@ img {
       grid-template-rows: 0.05fr 100%  1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-      grid-template-areas: "header header header " "main main main" "ofertaproductos ofertaproductos ofertaproductos" "footer footer footer";
+      grid-template-areas: "header header header "
+ "main main main"
+ "ofertaproductos ofertaproductos ofertaproductos"
+ "footer footer footer";
 }
 
 header {
@@ -403,7 +406,10 @@ ul {
         grid-template-rows: 0.05fr 120%  0.20fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-        grid-template-areas: "header header header " "main main main" "ofertaproductos ofertaproductos ofertaproductos" "footer footer footer";
+        grid-template-areas: "header header header "
+ "main main main"
+ "ofertaproductos ofertaproductos ofertaproductos"
+ "footer footer footer";
   }
 }
 
